# sagent

./: CODEBUDDY.md  Cargo.toml  LICENSE  README.md
.codebuddy/plans/: fix-tracing-surface-display-error_ad691cfd.md
crates/sagent-cli/: Cargo.toml
crates/sagent-cli/src/: cli.rs  config.rs  lib.rs  main.rs  managed_scope.rs
crates/sagent-cli/src/cli_core/: active_session.rs  file_lock.rs  mod.rs
crates/sagent-cli/src/commands/: mod.rs  run.rs
crates/sagent-common/: Cargo.toml
crates/sagent-common/src/: error.rs  lib.rs  path.rs  types.rs
crates/sagent-core/: Cargo.toml
crates/sagent-core/src/: lib.rs  logging.rs
crates/sagent-core/src/utils/: mod.rs  process.rs
crates/sagent-gateway/: Cargo.toml
crates/sagent-gateway/src/: lib.rs
crates/sagent-plugin/: Cargo.toml
crates/sagent-plugin/src/: lib.rs
docs/: rust-idioms-from-path.md  rust-impl-plan.md
