[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 错误处理
thiserror = "2"
anyhow = "1"

# CLI 解析
clap = { version = "4", features = ["derive", "env"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# 本地 crate
sagent-common = { path = "crates/sagent-common" }
sagent-core = { path = "crates/sagent-core" }
sagent-gateway = { path = "crates/sagent-gateway" }
sagent-plugin = { path = "crates/sagent-plugin" }
sagent-cli = { path = "crates/sagent-cli" }
