[package]
name = "sagent-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "sagent"
path = "src/main.rs"

[dependencies]
sagent-common.workspace = true
sagent-core.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
console = "0.15"
serde_json.workspace = true
serde_yaml = "0.9"
regex = "1"
