[package]
name = "sagent-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sagent-common.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
sysinfo = "0.38.4"
